task in process: NPE when getting a list of users